# ckanext-oidc-pkce-bpa

./: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/oidc_pkce_bpa/: __init__.py  config.py  config_declaration.yaml  plugin.py  route.py  utils.py
ckanext/oidc_pkce_bpa/assets/: script.js  webassets.yml
ckanext/oidc_pkce_bpa/templates/oidc_pkce_bpa/: login_error.html
ckanext/oidc_pkce_bpa/templates/user/: login.html
ckanext/oidc_pkce_bpa/tests/: test_config.py  test_plugin.py  test_utils.py
