[metadata]
name = ckanext-oidc-pkce-bpa
version = 0.0.1
description = BPA Customisations extending ckanext-oidc-pkce
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioplatformsAustralia/ckanext-oidc-pkce-bpa
author = Bioplatforms Australia
author_email = help@bioplatforms.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN OIDC PKCE

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             oidc_pkce_bpa = ckanext.oidc_pkce_bpa.plugin:OidcPkceBpaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/oidc_pkce_bpa/i18n/ckanext-oidc_pkce_bpa.pot
width = 80

[init_catalog]
domain = ckanext-oidc_pkce_bpa
input_file = ckanext/oidc_pkce_bpa/i18n/ckanext-oidc_pkce_bpa.pot
output_dir = ckanext/oidc_pkce_bpa/i18n

[update_catalog]
domain = ckanext-oidc_pkce_bpa
input_file = ckanext/oidc_pkce_bpa/i18n/ckanext-oidc_pkce_bpa.pot
output_dir = ckanext/oidc_pkce_bpa/i18n
previous = true

[compile_catalog]
domain = ckanext-oidc_pkce_bpa
directory = ckanext/oidc_pkce_bpa/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
